# pomice

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  FEATURES.md  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  faq.md  index.md  index.rst  installation.md  modules.rst  pomice.rst  pomice.spotify.rst  quickstart.md  requirements_rtd.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pomice.doctree  pomice.spotify.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  pomice.html  pomice.spotify.html  py-modindex.html  search.html  searchindex.js
docs/api/: enums.md  events.md  exceptions.md  filters.md  index.md  objects.md  player.md  pool.md  queue.md  utils.md
docs/hdi/: events.md  filters.md  index.md  node.md  player.md  pool.md  queue.md
examples/: advanced.py  advanced_features.py  basic.py
pomice/: __init__.py  enums.py  events.py  exceptions.py  filters.py  history.py  node.py  objects.py  player.py  playlist_manager.py  pool.py  queue.py  queue_stats.py  routeplanner.py  track_utils.py  utils.py
pomice/applemusic/: __init__.py  client.py  exceptions.py  objects.py
pomice/models/: __init__.py  events.py  music.py  payloads.py  version.py
pomice/spotify/: __init__.py  album.py  artist.py  client.py  exceptions.py  models.py  objects.py  playlist.py  track.py
pomice/spotify/models/: album.py  base.py  playlist.py  track.py
